--- a/package.json
+++ b/package.json
@@ -12,25 +12,36 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@dimforge/rapier3d-compat": "^0.10.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
+		"@theatre/core": "^0.5.0",
+		"@theatre/studio": "^0.5.0",
+		"@threlte/core": "5.0.7",
+		"@threlte/extras": "^4.8.0",
+		"@threlte/preprocess": "^0.0.2",
+		"@threlte/rapier": "^0.5.0",
+		"@threlte/theatre": "^0.0.2",
+		"@types/three": "^0.146.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.7",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
+		"svelte-preprocess": "^4.10.7",
+		"svelte-sequential-preprocessor": "^0.0.7",
+		"tailwindcss": "^3.1.5",
+		"three": "^0.147.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"postcss": "^8.4.14",
-		"postcss-load-config": "^4.0.1",
-		"svelte-preprocess": "^4.10.7",
-		"autoprefixer": "^10.4.7",
-		"tailwindcss": "^3.1.5"
+		"vite": "^4.0.0"
 	},
 	"type": "module"
 }
