--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@threlte/preprocess": "^0.0.2",
 		"@threlte/rapier": "^0.5.0",
 		"@threlte/theatre": "^0.0.2",
+		"@types/object-hash": "^3.0.1",
 		"@types/three": "^0.146.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -43,5 +44,8 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"object-hash": "^3.0.0"
+	}
 }
