--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@dimforge/rapier3d-compat": "^0.10.0",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "^1.0.5",
 		"@sveltejs/kit": "next",
 		"@theatre/core": "^0.5.0",
 		"@theatre/studio": "^0.5.0",
@@ -42,7 +43,8 @@
 		"three": "^0.147.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"vite-plugin-glsl": "^1.0.1"
 	},
 	"type": "module",
 	"dependencies": {
