--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@dimforge/rapier3d-compat": "^0.10.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^1.0.5",
-		"@sveltejs/kit": "next",
-		"@theatre/core": "^0.5.0",
-		"@theatre/studio": "^0.5.0",
-		"@threlte/core": "5.0.7",
-		"@threlte/extras": "^4.8.0",
+		"@sveltejs/adapter-auto": "latest",
+		"@sveltejs/adapter-static": "latest",
+		"@sveltejs/kit": "latest",
+		"@theatre/core": "^0.6.1",
+		"@theatre/studio": "^0.6.1",
+		"@threlte/core": "5.0.9",
+		"@threlte/extras": "^4.9.3",
 		"@threlte/preprocess": "^0.0.2",
-		"@threlte/rapier": "^0.5.0",
 		"@threlte/theatre": "^0.0.2",
 		"@types/object-hash": "^3.0.1",
-		"@types/three": "^0.146.0",
+		"@types/three": "^0.152.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.7",
@@ -35,12 +33,12 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
+		"svelte": "^3.59.1",
 		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.7",
 		"svelte-sequential-preprocessor": "^0.0.7",
-		"tailwindcss": "^3.1.5",
-		"three": "^0.147.0",
+		"tailwindcss": "^3.3.2",
+		"three": "^0.152.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
