feat: integrate moving buildings

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
 		"@sveltejs/kit": "latest",
 		"@theatre/core": "^0.6.1",
 		"@theatre/studio": "^0.6.1",
-		"@threlte/core": "5.0.9",
-		"@threlte/extras": "^4.9.3",
+		"@threlte/core": "next",
+		"@threlte/extras": "next",
 		"@threlte/preprocess": "^0.0.2",
-		"@threlte/theatre": "^0.0.2",
+		"@threlte/theatre": "next",
 		"@types/object-hash": "^3.0.1",
 		"@types/three": "^0.152.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
