--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.59.1",
 		"svelte-check": "^2.9.2",
+		"svelte-inview": "^4.0.0",
 		"svelte-preprocess": "^4.10.7",
 		"svelte-sequential-preprocessor": "^0.0.7",
 		"tailwindcss": "^3.3.2",
