--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,7 @@
 			"$lib": ["./src/lib"],
 			"$lib/*": ["./src/lib/*"]
 		},
-		"types": [
-      "vite-plugin-glsl/ext"
-    ]
+		"types": ["vite-plugin-glsl/ext"]
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
