--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"autoprefixer": "^10.4.13",
+		"blobity": "^0.2.3",
 		"classnames": "^2.3.2",
 		"eslint": "^8.29.0",
 		"eslint-config-prettier": "^8.5.0",
