--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@builder.io/partytown": "^0.8.0",
 		"@emailjs/browser": "^3.11.0",
 		"@iconify/svelte": "^3.1.4",
 		"@studio-freight/lenis": "^1.0.13",
