--- a/package.json
+++ b/package.json
@@ -33,21 +33,18 @@
 		"blobity": "^0.2.3",
 		"classnames": "^2.3.2",
 		"eslint": "^8.29.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.33.2",
 		"object-hash": "^3.0.0",
 		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
 		"postprocessing": "^6.31.0",
-		"prettier": "^2.8.1",
-		"prettier-plugin-svelte": "^2.9.0",
 		"sass": "^1.66.1",
-		"svelte": "^3.59.1",
-		"svelte-check": "^2.10.2",
-		"svelte-inview": "^4.0.0",
-		"svelte-preprocess": "^4.10.7",
-		"svelte-sequential-preprocessor": "^0.0.7",
-		"tailwindcss": "^3.3.2",
+		"svelte": "^4.2.1",
+		"svelte-check": "^3.5.2",
+		"svelte-inview": "^4.0.1",
+		"svelte-preprocess": "^5.0.4",
+		"svelte-sequential-preprocessor": "^2.0.1",
+		"tailwindcss": "^3.3.3",
 		"three": "^0.152.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
