--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"classnames": "^2.3.2",
 		"eslint": "^8.29.0",
 		"eslint-plugin-svelte": "^2.33.2",
+		"mdsvex": "^0.11.0",
 		"object-hash": "^3.0.0",
 		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
