--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "latest",
 		"@sveltejs/adapter-static": "latest",
 		"@sveltejs/kit": "latest",
+		"@tailwindcss/typography": "^0.5.10",
 		"@theatre/core": "^0.6.1",
 		"@theatre/studio": "^0.6.1",
 		"@threlte/core": "next",
