--- a/package.json
+++ b/package.json
@@ -20,14 +20,7 @@
 		"@sveltejs/adapter-static": "latest",
 		"@sveltejs/kit": "latest",
 		"@tailwindcss/typography": "^0.5.10",
-		"@theatre/core": "^0.6.1",
-		"@theatre/studio": "^0.6.1",
-		"@threlte/core": "next",
-		"@threlte/extras": "next",
-		"@threlte/preprocess": "^0.0.2",
-		"@threlte/theatre": "next",
 		"@types/object-hash": "^3.0.1",
-		"@types/three": "^0.152.0",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"autoprefixer": "^10.4.13",
@@ -44,14 +37,13 @@
 		"svelte": "^4.2.1",
 		"svelte-check": "^3.5.2",
 		"svelte-inview": "^4.0.1",
+		"svelte-lightbox": "^1.1.2",
 		"svelte-preprocess": "^5.0.4",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"tailwindcss": "^3.3.3",
-		"three": "^0.152.2",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
-		"vite": "^4.0.1",
-		"vite-plugin-glsl": "^1.1.2"
+		"vite": "^4.0.1"
 	},
 	"type": "module"
 }
