--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
-		"format": "eslint --fix ."
+		"format": "eslint --fix .",
+		"optimize": "jampack ./build --exclude **/*.js"
 	},
 	"devDependencies": {
 		"@builder.io/partytown": "^0.8.0",
+		"@divriots/jampack": "^0.22.1",
 		"@emailjs/browser": "^3.11.0",
 		"@iconify/svelte": "^3.1.4",
 		"@studio-freight/lenis": "^1.0.13",
