--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
+		"postbuild": "pnpm optimize && pnpm sitemap",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "eslint .",
 		"format": "eslint --fix .",
-		"optimize": "jampack ./build --exclude **/*.js"
+		"optimize": "jampack ./build --exclude **/*.js",
+		"sitemap": "svelte-sitemap --domain https://$CNAME"
 	},
 	"devDependencies": {
 		"@builder.io/partytown": "^0.8.0",
@@ -40,6 +42,7 @@
 		"svelte-inview": "^4.0.1",
 		"svelte-preprocess": "^5.0.4",
 		"svelte-sequential-preprocessor": "^2.0.1",
+		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
