--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Optimize build
         run: pnpm postbuild
         env:
-          cname: ${{ secrets.CNAME }}
+          CNAME: ${{ secrets.CNAME }}
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
