--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-auto": "latest",
 		"@sveltejs/adapter-static": "latest",
 		"@sveltejs/kit": "latest",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/object-hash": "^3.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
@@ -45,8 +46,8 @@
 		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.1"
+		"typescript": "^5.0.0",
+		"vite": "^5.0.0"
 	},
 	"type": "module"
 }
