--- a/package.json
+++ b/package.json
@@ -15,39 +15,40 @@
 		"sitemap": "svelte-sitemap --domain https://$CNAME"
 	},
 	"devDependencies": {
-		"@builder.io/partytown": "^0.8.0",
-		"@divriots/jampack": "^0.22.1",
+		"@builder.io/partytown": "^0.8.1",
+		"@divriots/jampack": "^0.23.1",
 		"@emailjs/browser": "^3.11.0",
-		"@iconify/svelte": "^3.1.4",
-		"@studio-freight/lenis": "^1.0.13",
+		"@iconify/svelte": "^3.1.6",
+		"@studio-freight/lenis": "^1.0.33",
 		"@sveltejs/adapter-auto": "latest",
 		"@sveltejs/adapter-static": "latest",
 		"@sveltejs/kit": "latest",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tailwindcss/typography": "^0.5.10",
-		"@types/object-hash": "^3.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.46.1",
-		"@typescript-eslint/parser": "^5.46.1",
-		"autoprefixer": "^10.4.13",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
+		"@types/object-hash": "^3.0.6",
+		"@typescript-eslint/eslint-plugin": "^6.17.0",
+		"@typescript-eslint/parser": "^6.17.0",
+		"autoprefixer": "^10.4.16",
 		"blobity": "^0.2.3",
-		"classnames": "^2.3.2",
-		"eslint": "^8.29.0",
-		"eslint-plugin-svelte": "^2.33.2",
+		"classnames": "^2.5.1",
+		"eslint": "^8.56.0",
+		"eslint-plugin-svelte": "^2.35.1",
 		"mdsvex": "^0.11.0",
-		"object-hash": "^3.0.0",
-		"postcss": "^8.4.20",
-		"postcss-load-config": "^4.0.1",
-		"sass": "^1.66.1",
-		"svelte": "^4.2.1",
-		"svelte-check": "^3.5.2",
-		"svelte-inview": "^4.0.1",
-		"svelte-preprocess": "^5.0.4",
+		"postcss": "^8.4.32",
+		"postcss-load-config": "^5.0.2",
+		"sass": "^1.69.6",
+		"svelte": "^4.2.8",
+		"svelte-check": "^3.6.2",
+		"svelte-inview": "^4.0.2",
+		"svelte-preprocess": "^5.1.3",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"svelte-sitemap": "^2.6.0",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.0"
+		"tailwindcss": "^3.4.0",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.10"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"object-hash": "^3.0.0"
+	}
 }
