--- a/package.json
+++ b/package.json
@@ -15,37 +15,37 @@
 		"sitemap": "svelte-sitemap --domain https://$CNAME"
 	},
 	"devDependencies": {
-		"@builder.io/partytown": "^0.8.1",
-		"@divriots/jampack": "^0.23.1",
-		"@emailjs/browser": "^3.11.0",
+		"@builder.io/partytown": "^0.8.2",
+		"@divriots/jampack": "^0.23.2",
+		"@emailjs/browser": "^3.12.1",
 		"@iconify/svelte": "^3.1.6",
-		"@studio-freight/lenis": "^1.0.33",
+		"@studio-freight/lenis": "^1.0.34",
 		"@sveltejs/adapter-auto": "latest",
 		"@sveltejs/adapter-static": "latest",
 		"@sveltejs/kit": "latest",
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@types/object-hash": "^3.0.6",
-		"@typescript-eslint/eslint-plugin": "^6.17.0",
-		"@typescript-eslint/parser": "^6.17.0",
-		"autoprefixer": "^10.4.16",
+		"@typescript-eslint/eslint-plugin": "^6.19.1",
+		"@typescript-eslint/parser": "^6.19.1",
+		"autoprefixer": "^10.4.17",
 		"blobity": "^0.2.3",
 		"classnames": "^2.5.1",
 		"eslint": "^8.56.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.32",
+		"postcss": "^8.4.33",
 		"postcss-load-config": "^5.0.2",
-		"sass": "^1.69.6",
-		"svelte": "^4.2.8",
-		"svelte-check": "^3.6.2",
+		"postcss-nesting": "^12.0.2",
+		"sass": "^1.70.0",
+		"svelte": "^4.2.9",
+		"svelte-check": "^3.6.3",
 		"svelte-inview": "^4.0.2",
 		"svelte-preprocess": "^5.1.3",
 		"svelte-sequential-preprocessor": "^2.0.1",
 		"svelte-sitemap": "^2.6.0",
-		"tailwindcss": "^3.4.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.0.10"
+		"vite": "^5.0.12"
 	},
 	"type": "module",
 	"dependencies": {
